--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,25 @@
 /karel5.class
 /bonus1.class
 /task6.class
+/graphics12.class
+/Graphics12.class
+/graphics13.class
+/multiplying.class
+/checkboardpractice.class
+/pr.class
+/consolepractice.class
+/concsolepr.class
+/console17.class
+/connsole18.class
+/console19.class
+/console23.class
+/console24.class
+/circles.class
+/checkerboardgraphics.class
+/consoleBoard.class
+/console20.class
+/console25.class
+/console26.class
+/console27.class
+/console28.class
+/println30.class
