some commit message

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,90 @@
 /assignment2.class
 /sum1.class
 /ConsoleSample.class
+/console30.class
+/ConsoleProgram30.class
+/console31.class
+/console35.class
+/console36.class
+/Assignment2Pyramid.class
+/practice2.class
+/hierarchy.class
+/graphics34.class
+/Graphics33.class
+/Graphics39.class
+/console32.class
+/console37.class
+/GraphicsEvent.class
+/bonus13.class
+/Graphicss41.class
+/Graphics42.class
+/breakout.class
+/BouncingBall.class
+/breakout$addBricks.class
+/graphics43.class
+/string47.class
+/string48.class
+/string49.class
+/string.class
+/string46.class
+/reversedString.class
+/string50.class
+/strijng51.class
+/StringBonus17.class
+/aatrings.class
+/Shualedruri2021.class
+/shualeduri22.class
+/stringleetcode.class
+/leetcode.class
+/strings.class
+/practiceprob2.class
+/shualeduri2017.class
+/randomSpeed.class
+/shualedurebi.class
+/graphicsPractics.class
+/fileReading.class
+/problem53.class
+/problem54.class
+/problem55.class
+/problem56.class
+/reverseArray.class
+/Problem56.class
+/problem57.class
+/problem58.class
+/school.class
+/schooltst.class
+/csGroup.class
+/csGroupTest.class
+/School.class
+/GroupTesst.class
+/SchoolTst.class
+/aaaa.class
+/NameSurferDataBase.class
+/NameSurferGraph.class
+/represents$is.class
+/represents.class
+/NameSurfer.class
+/NameSurferEntry.class
+/aaaa$represents.class
+/problem60.class
+/problem61.class
+/problem62.class
+/problem63to66.class
+/problem59.class
+/findRange.class
+/frindRange.class
+/friendGroup.class
+/problem72.class
+/rearrange.class
+/studentsFinal2020.class
+/finals.class
+/powerPoint.class
+/finals2022.class
+/goodFriends.class
+/newset.class
+/mySet.class
+/coinOnTheGrid.class
+/twoBalls.class
+/finalIMDB.class
+/IMDBtest.class
+/minimax.class
